--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </tr>
   
   <tr>
-  <td align="center"><a href="blog.html" style="color:#ffde17; text-decoration:none">Blog</a>
+  <td align="center"><a href="https://vissih.substack.com" style="color:#ffde17; text-decoration:none">Blog / Newsletter</a>
   </td>
   </tr>
   
