--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </tr>
 
   <tr>
-  <td align="center"><a href="https://www.instagram.com/imvissih" style="color:#ffde17; text-decoration:none">Instagram</a>
+  <td align="center"><a href="https://www.instagram.com/vikasfx" style="color:#ffde17; text-decoration:none">Instagram</a>
     </td>
   </tr>
 
