--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
 <tr>
 <td>
-<p align="center" style="color: #ffde17;font-size:20px">Below is my Email ID<br>••••<br>me@vissih.eu.org</p>
+<p align="center" style="color: #ffde17;font-size:20px">Below is my Email ID<br>••••<br>officialvissih@gmail.com</p>
 </td>
 </tr>
 </table>
