--- a/index.html
+++ b/index.html
@@ -11,87 +11,6 @@
 </head>
 
 <body>
-    <div id="minicircle">
-        
-    </div>
-    <div id="main">
-        <div id="hero">
-            <div id="nav">
-                <a href="#">vissih</a>
-                <h4>menu+</h4>
-            </div>
-            <div id="heading">
-                <div class="bounding">
-                    <h1 class="boundingelem">Fullstack</h1>
-                </div>
-                <div class="blocktext">
-                    <div class="bounding">
-                        <h1 class="boundingelem" id="secondh1">Developer</h1>
-                    </div>
-                    <div class="bounding">
-                        <h5 class="boundingelem" id="secondh1">based in kolkata</h5>
-                    </div>
-                </div>
-                <div id="smallHeading">
-                    <div class="bounding">
-                        <h5 class="boundingelem" id="secondh1">available for freelance</h5>
-                    </div>
-                    <div class="bounding">
-                        <h5 class="boundingelem" id="secondh1">looking for fullstack dev roles</h5>
-                    </div>
-                </div>
-                <div id="herofooter">
-                    <a href="#">previously worked at tph <i class="ri-arrow-right-up-line"></i></a>
-                    <div id="iconset">
-                        <div class="circle"><i class="ri-arrow-down-line"></i></div>
-                        <div class="circle"><i class="ri-arrow-down-line"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="second">
-            <div class="elem">
-                <img src="plug.png" alt="" srcset="">
-                <h1>The Plug</h1>
-                <h5>2023</h5>
-            </div>
-            <div class="elem">
-                <img src="ixperience.png" alt="" srcset="">
-                <h1>ixperience</h1>
-                <h5>2023</h5>
-            </div>
-            <div class="elem elemlast">
-                <img src="hudu.png" alt="" srcset="">
-                <h1>hudu</h1>
-                <h5>2023</h5>
-            </div>
-        </div>
-        <div id="about">
-            <img src="pfp-modified.png" alt="" srcset="">
-            <div id="textabout">
-                <h5>(About Me)</h5>
-                <p>I'm a product designer with a passion for creating products that not only look good but also solve real problems. When I'm not sketching ideas on paper, you can find me binge-watching a Netflix series or playing video games. My design philosophy is simple: make it visually appealing, functional, and bring a smile to people's faces. I'm the designer you want on your team if you want to make people say 'I need that in my life!'.
-                </p>
-                <a href="">Let's talk</a>
-            </div>
-        </div>
-        <div id="subscribe">
-            <h5>(forgot to mention)</h5>
-            <h3>subscribe to my youtube channel <i class="ri-arrow-right-up-line"></i></h3>
-        </div>
-        <div id="footer">
-            <div id="footerleft">
-                <h5>2023 &copy;</h5>
-                <h5>02:00 Am EST</h5>
-            </div>
-            <div id="footerright">
-                <a href="#">dribble</a><a href="#">instagram</a><a href="#">linkedin</a><a href="#">twitter</a>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script src="script.js"></script>
+                    <h1>Site under construction</h1>
 </body>
 </html>
