--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>vissih</title>
     <link rel="stylesheet" href="loco.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div id="herofooter">
-                <a href="#">previously worked at tph <i class="ri-arrow-right-up-line"></i></a>
+                <a href="https://twitter.com/0xtph">previously worked at tph <i class="ri-arrow-right-up-line"></i></a>
                 <div id="iconset">
                     <div class="circle"><i class="ri-arrow-down-line"></i></div>
                     <div class="circle"><i class="ri-arrow-down-line"></i></div>
@@ -84,7 +84,11 @@
                 <h5>0:05 AM EST</h5>
             </div>
             <div id="footerright">
-                <a href="#">blogs</a><a href="#">github</a><a href="#">linkedin</a><a href="#">twitter</a><a href="#">instagram</a>
+                <a href="https://mirror.xyz/0x74c2731fd6C1261130242dDbEaB14bDfAF6Aad38">blogs</a>
+                <a href="https://github.com/vissih">github</a>
+                <a href="https://www.linkedin.com/in/vissih/">linkedin</a>
+                <a href="https://twitter.com/vissih">twitter</a>
+                <a href="https://www.instagram.com/0xvissih/">instagram</a>
             </div>
         </div>
     </div>
