--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div id="subscribe">
             <h5>(forgot to mention)</h5>
-            <h3>subscribe to my youtube channel <i class="ri-arrow-right-up-line"></i></h3>
+            <h3><a href="https://www.youtube.com/@0xvissih">subscribe to my youtube channel </a><i class="ri-arrow-right-up-line"></i></h3>
         </div>
         <div id="footer">
             <div id="footerleft">
