--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <div id="second">
             <div class="elem">
                 <img src="./gradientor.png" alt="">
-                <h1>Gradientor</h1>
+                <h1> <a href="https://moonlit-moxie-1c87fe.netlify.app/"> Gradientor </a> </h1>
                 <h5>2023</h5>
             </div>
             <div class="elem">
                 <img src="./pixelpaint.png" alt="">
-                <h1>Pixel Paint</h1>
+                <h1> <a href="https://brilliant-empanada-21989f.netlify.app/"> Pixel Paint </a> </h1>
                 <h5>2023</h5>
             </div>
             <div class="elem elemlast">
