--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h5>(ABout me)</h5>
                 <p>I'm a fullstack developer with a passion for creating products that not only look good but also solve real problems. On weekends, you can find me binge-watching an anime series or reading manga.
                 </p>
-                <a href="">Let's talk</a>
+                <a href="maltio:officialvissih@gmail.com">Let's talk</a>
             </div>
         </div>
         <div id="subscribe">
@@ -81,7 +81,6 @@
         <div id="footer">
             <div id="footerleft">
                 <h5>2023 &copy;</h5>
-                <h5>0:05 AM EST</h5>
             </div>
             <div id="footerright">
                 <a href="https://mirror.xyz/0x74c2731fd6C1261130242dDbEaB14bDfAF6Aad38">blogs</a>
