--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h5>(ABout me)</h5>
                 <p>I'm a fullstack developer with a passion for creating products that not only look good but also solve real problems. On weekends, you can find me binge-watching an anime series or reading manga.
                 </p>
-                <a href="maltio:officialvissih@gmail.com">Let's talk</a>
+                <a href="mailto:officialvissih@gmail.com">Let's talk</a>
             </div>
         </div>
         <div id="subscribe">
