--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="elem elemlast">
                 <img src="./colourpicker.png" alt="">
-                <h1>Colour Picker</h1>
+                <h1> <a href="https://github.com/vissih/colour-extension" > Colour Picker </a></h1>
                 <h5>2023</h5>
             </div>
         </div>
