--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="elem">
                 <img src="./pixelpaint.png" alt="">
-                <h1> <a href="https://brilliant-empanada-21989f.netlify.app/"> Pixel Paint </a> </h1>
+                <h1> <a href="https://brilliant-empanada-21989f.netlify.app/"> Pixel Painter </a> </h1>
                 <h5>2023</h5>
             </div>
             <div class="elem elemlast">
