--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="hero">
             <div id="nav">
                 <a href="#">vissih</a>
+                <a href="#">https://drive.google.com/file/d/1uJ930e5cUlq-XMmg5gc0I4ktL0s_jTqQ/view?usp=sharing</a>
             </div>
             <div id="heading">
                 <div class="bounding">
