--- a/index.html
+++ b/index.html
@@ -1,101 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vissih</title>
-    <link rel="stylesheet" href="loco.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <div id="minicircle"></div>
-    <div id="main">
-        <div id="hero">
-            <div id="nav">
-                <a href="#">vissih</a>
-                <a href="https://drive.google.com/file/d/1uJ930e5cUlq-XMmg5gc0I4ktL0s_jTqQ/view?usp=sharing">resume/cv</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>Vikas Singh</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+            <div class="frame" id="Frame">
+                <div class="line frame_line frame_line-left"></div>
+                <div class="line frame_line frame_line-right"></div>
+                <div class="line frame_line frame_line-top"></div>
+                <div class="line frame_line frame_line-bottom"></div>
+                <h3 class="main"> under construction ;P </h3>
             </div>
-            <div id="heading">
-                <div class="bounding">
-                    <h1 class="boundingelem">Fullstack</h1>
-                </div>
-                <div class="blocktext">
-                    <div class="bounding">
-                        <h1 class="boundingelem" id="secondh1">Developer</h1>
-                    </div>
-                    <div class="bounding">
-                        <h5 class="boundingelem">Based in kolkata</h5>
-                    </div>
-                </div>
-            </div>
-            <div id="chhotiheadings">
-                <div class="bounding">
-                    <h5 class="boundingelem">available for freelance</h5>
-                </div>
-                <div class="bounding">
-                    <h5 class="boundingelem">looking for job (fullstack roles)</h5>
-                </div>
-            </div>
-            <div id="herofooter">
-                <a href="https://twitter.com/0xtph">previously worked at tph <i class="ri-arrow-right-up-line"></i></a>
-                <div id="iconset">
-                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
-                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
-                </div>
-            </div>
-        </div>
-        <div id="second">
-            <div class="elem">
-                <img src="./gradientor.png" alt="">
-                <h1> <a href="https://moonlit-moxie-1c87fe.netlify.app/"> Gradientor </a> </h1>
-                <h5>2023</h5>
-            </div>
-            <div class="elem">
-                <img src="./pixelpaint.png" alt="">
-                <h1> <a href="https://brilliant-empanada-21989f.netlify.app/"> Pixel Painter </a> </h1>
-                <h5>2023</h5>
-            </div>
-            <div class="elem elemlast">
-                <img src="./colourpicker.png" alt="">
-                <h1> <a href="https://github.com/vissih/colour-extension" > Colour Picker </a></h1>
-                <h5>2023</h5>
-            </div>
-        </div>
-        <div id="about">
-            <img src="pfp.png" alt="">
-            <div id="textabout">
-                <h5>(ABout me)</h5>
-                <p>I'm a fullstack developer with a passion for creating products that not only look good but also solve real problems. On weekends, you can find me binge-watching an anime series or reading manga.
-                </p>
-                <a href="mailto:officialvissih@gmail.com">Let's talk</a>
-            </div>
-        </div>
-        <div id="subscribe">
-            <h5>(forgot to mention)</h5>
-            <h3><a href="https://www.youtube.com/@0xvissih">subscribe to my youtube channel </a><i class="ri-arrow-right-up-line"></i></h3>
-        </div>
-        <div id="footer">
-            <div id="footerleft">
-                <h5>2023 &copy;</h5>
-            </div>
-            <div id="footerright">
-                <a href="https://mirror.xyz/0x74c2731fd6C1261130242dDbEaB14bDfAF6Aad38">blogs</a>
-                <a href="https://github.com/vissih">github</a>
-                <a href="https://www.linkedin.com/in/vissih/">linkedin</a>
-                <a href="https://twitter.com/vissih">twitter</a>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"
-        integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script src="script.js"></script>
-</body>
-
+            <script src="main.js"></script>
+    </body>
 </html>
