--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Vikas Singh</title>
+        <title>vissih</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
