--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       canvas {
         display: block;
       }
-      .logo{position:absolute;bottom:16px;right:16px;width:32px;height:32px;z-index:2;background-image:url(https://app.spline.design/_assets/_icons/icon_favicon32x32.png);background-size:cover;}.logo:hover{opacity:0.8;}
     </style>
   </head>
   <body>
@@ -23,7 +22,7 @@
       import { Application } from './runtime.js';
       const canvas = document.getElementById('canvas3d');
       const app = new Application(canvas);
-      app.load('./scene.splinecode');
+      app.load('./scene.vissih');
     </script>
   </body>
 </html>
